@@ -816,9 +816,10 @@ namespace BOB
 				return;
 			}
 
-			// Original position and angle.
+			// Original position and angle adjustment.
 			Vector3 basePosition = new Vector3();
-			float angle = 0f;
+			float angle = 0f, angleAdjustment = 0f;
+
 
 			// Find matching prop reference (by lane and index match) in original values.
 			foreach (NetPropReference propReference in originalValues)
@@ -828,6 +829,7 @@ namespace BOB
 					// Found a match - retrieve original position and angle.
 					basePosition = propReference.position - propReference.adjustment;
 					angle = propReference.angle;
+					angleAdjustment = propReference.angleAdjustment;
 					break;
 				}
 			}
@@ -852,7 +854,7 @@ namespace BOB
 			// Preview new position and probability setting.
 			thisProp.m_position = basePosition + new Vector3(offsetX, ySlider.TrueValue, zSlider.TrueValue);
 			thisProp.m_probability = (int)probabilitySlider.TrueValue;
-			thisProp.m_angle = angle + ((int)angleSlider.TrueValue * angleMult);
+			thisProp.m_angle = angle + ((angleSlider.TrueValue - angleAdjustment) * angleMult);
 
 			// Set repeat distance, if valid - individual mode only.
 			if (CurrentMode == ReplacementModes.Individual && originalValues[0].repeatDistance > 1f && repeatSlider.TrueValue > 1f)
@@ -902,14 +904,16 @@ namespace BOB
 			// Local reference.
 			NetLaneProps.Prop thisProp = propBuffer[propIndex];
 
-			// Get any position adjustments from active replacements, checking in priority order.
+			// Get any position and angle adjustments from active replacements, checking in priority order.
 			Vector3 adjustment = Vector3.zero;
+			float angleAdjustment = 0f;
 			if (IndividualNetworkReplacement.Instance.ActiveReplacement(SelectedNet, lane, propIndex, out _) is BOBNetReplacement individualReplacement)
 			{
 				// Individual replacement.
 				adjustment.x = individualReplacement.offsetX;
 				adjustment.y = individualReplacement.offsetY;
 				adjustment.z = individualReplacement.offsetZ;
+				angleAdjustment = individualReplacement.angle;
 			}
 			else if (NetworkReplacement.Instance.ActiveReplacement(SelectedNet, lane, propIndex, out _) is BOBNetReplacement netReplacement)
 			{
@@ -917,6 +921,7 @@ namespace BOB
 				adjustment.x = netReplacement.offsetX;
 				adjustment.y = netReplacement.offsetY;
 				adjustment.z = netReplacement.offsetZ;
+				angleAdjustment = netReplacement.angle;
 			}
 			else if (AllNetworkReplacement.Instance.ActiveReplacement(SelectedNet, lane, propIndex, out _) is BOBNetReplacement allNetReplacement)
 			{
@@ -924,6 +929,7 @@ namespace BOB
 				adjustment.x = allNetReplacement.offsetX;
 				adjustment.y = allNetReplacement.offsetY;
 				adjustment.z = allNetReplacement.offsetZ;
+				angleAdjustment = allNetReplacement.angle;
 			}
 
 			// Return original data.
@@ -936,6 +942,7 @@ namespace BOB
 				originalFinalProp = thisProp.m_finalProp,
 				originalFinalTree = thisProp.m_finalTree,
 				angle = thisProp.m_angle,
+				angleAdjustment = angleAdjustment,
 				position = thisProp.m_position,
 				adjustment = adjustment,
 				probability = thisProp.m_probability,
